# wasm-game-engine

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  index.html
assets/: bindings.ron
assets/models/: cube.mtl  laser.mtl  laser.ron  starfighter-enemy.mtl  starfighter.mtl  starfighter.ron
assets/scenes/: canyon_runner.ron
assets/worlds/: canyon_runner.ron
docs/: COLLISION.md  ECS_IMPL.md  ENGINE_OVERVIEW.md  SCENE_SERIALISATION.md
docs/tickets/: egui-srgb-mismatch.md
res/: starfighter.mtl
src/: example.rs  lib.rs  light.wgsl  main.rs  shader.wgsl  wireframe.wgsl
src/engine/: app.rs  camera.rs  color.rs  context.rs  draw.rs  fps_counter.rs  game_object.rs  game_setup.rs  game_state.rs  instance.rs  light.rs  logger.rs  mod.rs  model.rs  render_pipeline.rs  resources.rs  scene.rs  state.rs  surface.rs  texture.rs  vertex.rs  window.rs
src/engine/assets/: loader.rs  mod.rs  ron_loader.rs  server.rs
src/engine/cam/: camera.rs  controller.rs  mod.rs  projection.rs  uniform.rs
src/engine/camera/: camera.rs  controller.rs  mod.rs  projection.rs  uniform.rs
src/engine/ecs/: component_registry.rs  entity.rs  mod.rs  query.rs  sparse_set.rs  system.rs  world.rs  world_descriptor.rs
src/engine/events/: event_registry.rs  events.rs  mod.rs
src/engine/input/: bindings_descriptor.rs  input_state.rs  mod.rs
src/engine/model/: descriptor.rs  loader.rs  material.rs  mesh.rs  mod.rs  model.rs  model_registry.rs  normals.rs  vertex.rs
src/engine/scene/: mod.rs  scene.rs  scene_descriptor.rs  scene_manager.rs
src/engine/state/: app_state.rs  context.rs  engine_state.rs  mod.rs  render_state.rs
src/functional_tests/: big_grid_graph.rs  grid_graph.rs  mod.rs
src/game/: assets.rs  camera_controller.rs  canyon_runner_scene.rs  canyon_runner_world.rs  cube.rs  laser.rs  mod.rs  procedural_generation.rs  starfighter.rs  terrain.rs  terrain_generation.rs
src/maths/: mod.rs
src/networks/: edge.rs  graph.rs  mod.rs  node.rs
src/rendering/: mod.rs
src/scenairos/: basic_graph.rs  grid_graph.rs  mod.rs  scenario.rs
src/shaders/: terrain-shader.wgsl
src/vector/: vector_2d.rs
(+72 files in other folders)
