[package]
name = "aoee-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.5"
wgpu = "23.0.0"
env_logger = "0.11.5"
log = "0.4"
pollster = "0.4.0"
bytemuck = { version = "1.7.0", features = ["derive"] }
cgmath = "0.18.0"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["jpeg", "png"]
