[lib]
name = "wasm_game_engine" 
crate-type = ["cdylib", "rlib"]

[package]
name = "wasm-game-engine"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
winit = "0.30.5"
wgpu = "24.0.5"
env_logger = "0.11.5"
log = "0.4"
pollster = "0.4.0"
bytemuck = { version = "1.7.0", features = ["derive"] }
cgmath = "0.18.0"
cfg-if = "1"
tobj = { version = "3.2", default-features = false, features = ["async"]}
noise = "0.9.0"
rand = "0.9.1"
wgpu_text = "=0.9.2"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["jpeg", "png"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0.5", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"'] 

[[bin]]
name = "canyon_runner"  
path = "src/main.rs"